--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href=".\style.css">
-    <script></script>
     <title>SignUp-Form</title>
 </head>
 
 <body>
     <div id="backpic">
         <div id="logo"><img src=".\image\palm.png" alt="palm">
-        <div id="logo-text">Calm Islands</div>
+            <div id="logo-text">Calm Islands</div>
         </div>
     </div>
     <div id="content">
@@ -23,7 +22,7 @@
             </div>
             <div id="tempt">You <em>know</em> you want to.</div>
         </div>
-        <form action="#" method="post">
+        <form action="#" method="post" name="signup" id="signup">
             <div id="mid">
                 <legend>Let's do this!</legend>
                 <div id="name">
@@ -43,24 +42,25 @@
                     </div>
                     <div>
                         <label for="phone_no">Phone Number</label>
-                        <input type="number" id="phone_no" name="phone_no" max="10" min="8" required>
+                        <input type="text" id="phone_no" name="phone_no" maxlength="10" required>
                     </div>
                 </div>
                 <div id="password">
-                    <div>
+                    <div id="pass">
                         <label for="password">Password</label>
-                        <input type="password" id="password" name="password" maxlength="20" minlength="8">
+                        <input type="password" id="password" name="password" maxlength="20" minlength="8" value="">
                     </div>
                     <div>
                         <label for="confirm_password">Confirm Password</label>
-                        <input type="password" id="confirm_password" name="confirm_password" maxlength="20" minlength="8">
-                                        </div>
+                        <input type="password" id="confirm_password" name="confirm_password" maxlength="20" minlength="8" value="">
                     </div>
+                </div>
             </div>
-            <button type="submit">Create Account</button>
+            <button type="submit" id="submit">Create Account</button>
         </form>
         <div id="login">Already have an account? <a href="#">Log in</a></div>
     </div>
+   
 </body>
 
 </html>
